$Id: History,v 1.9 2001-07-18 18:32:40 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/modeling
---------------------------------------

18th July 2001  John Allison  (modeling-V03-02-00)
- Ensured rotation and translation of replica is restored.

3rd February 2001  John Allison  (vis-V03-00-02)
- Tidied for CodeWizard.

29th May 2000  John Allison
- Moved code for maintaining depth, physical and logical volume
  pointers from VisitGeometryAndGetVisReps to DescribeAndDescend to
  handle daughters of replicas correctly (Guy Barrand).

22nd May 2000  John Allison  (modeling-V01-01-00)
- Added G4VTreeGraphicsScene (DTREE).
- Commented out pVPV->SetCopyNo(n) on Makoto's advice in
  G4PhysicalVolumeModel.cc.

vis-V01-01-01  12th April 2000  John Allison
- Made G4PhysicalVolumeModel::DescribeSolid virtual.
- G4PhysicalVolumeModel::DescribeSolid no longer deals with composite
  solids - now programmed into CompositeSolid::CreatePolyhedron, where
  CompositeSolid means G4IntersectionSolid, G4SubtractionSolid and
  G4UnionSolid.
- G4PhysicalVolumeModel::DescribeSolid no longer deals with displaced
  solids - now programmed into G4DisplacedSolid::CreatePolyhedron.